--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - 2.7
 notifications:
   email:
-    - tbarbugli@gmail.com
+    - gamunu.balagalla@outlook.com
 install:
   - pip install pep8
   - python setup.py install
